syntax = "proto2";
package cs_player;

//消息ID定义[范围1101-1200]
//见cs_comon::msg_route
enum MSGID{
  msg_id_req_query_player 	= 1101;
}

// 查询玩家基础信息
message req_query_player{
  optional int64 player_id = 1;
}

message resp_query_player{
  optional int32  err_code = 1;
  optional string err_desc = 2;
}